# clutch-browser-extension-consumer-backend

./: .gitignore  Cargo.toml  README.md  check.sh  refinery.toml  start.sh
config/: dev.toml  local.toml  mumbai.toml  prod.toml  test.toml
migrations/: V1__create_table_verifications.sql  V2__create_table_accounts.sql  V3__create_tables_guardian.sql
secure/: .gitignore  dev.json  prod.json  test.json  test.key
src/: server.rs
src/lib/: mod.rs
tests/: account_api_test.rs  account_guardians_api_test.rs  email_api_test.rs  guardian_api_test.rs  guardian_settings_api_test.rs  nomination_api_test.rs
tests/snapshots/: account_api_test__error_when_account_already_exists.snap  account_api_test__error_when_bearer_token_claim_is_invalid_email_on_update_account.snap  account_api_test__error_when_cannot_decode_bearer_token_on_update_account.snap  account_api_test__error_when_no_bearer_token_on_update_account.snap  account_api_test__error_when_verification_code_expired.snap  account_api_test__error_when_verification_not_found_for_account.snap  account_api_test__find_all_by_eoa_address.snap  account_api_test__find_all_by_wallet_address.snap  account_api_test__invalid_email_format.snap  account_api_test__retrieve_all_accounts.snap  account_api_test__successfully_create_account_with_jwt.snap  account_api_test__successfully_update_account.snap  account_guardians_api_test__can_remove_a_guardian_from_an_account.snap  account_guardians_api_test__can_retrieve_all_guardians_for_an_account.snap  account_guardians_api_test__can_retrieve_all_guardians_for_an_account_filter_by_guardian_id.snap  account_guardians_api_test__error_when_remove_an_active_guardian_from_an_account-2.snap  account_guardians_api_test__error_when_remove_an_active_guardian_from_an_account.snap  email_api_test__error_when_exceeds_email_send_limit.snap  email_api_test__invalid_email_format.snap  email_api_test__verify_email.snap  (+18 more)
(+28 files in other folders)
